Docker-compose - port fix

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,8 @@ services:
   mariadb:
     image: "mariadb:latest"
     restart: never
-    ports: - 3306:3306
+    ports: 
+      - 3306:3306
     volumes:
       - ./db/riddler.sql
     environment:
