--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   php:
     build: .
-    restart: never
+    restart: unless-stopped
     volumes: 
       - ./:/var/www/html
     ports: 
@@ -12,7 +12,7 @@ services:
   
   mariadb:
     image: "mariadb:latest"
-    restart: never
+    restart: unless-stopped
     ports: 
       - 3306:3306
     volumes:
@@ -25,7 +25,7 @@ services:
     depends_on:
       - mariadb
     image: "phpmyadmin:latest"
-    restart: never
+    restart: unless-stopped
     ports:
       - 8000:80
     environment:
